applications/buildkitd/base/resources/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: buildkitd
  labels:
    app: buildkitd
    pod-security.kubernetes.io/audit: privileged
    pod-security.kubernetes.io/enforce: privileged
    pod-security.kubernetes.io/warn: privileged
