applications/buildkitd/base/resources/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: buildkitd
  namespace: buildkitd
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  strategy:
    type: Recreate
  replicas: 1
  selector:
    matchLabels:
      app: buildkitd
  template:
    metadata:
      labels:
        app: buildkitd
    spec:
      terminationGracePeriodSeconds: 60
      containers:
        - name: buildkitd
          image: moby/buildkit:v0.33.1-rootless
          args:
            - --addr
            - unix:///run/user/1000/buildkit/buildkitd.sock
            - --addr
            - tcp://0.0.0.0:1234
            - --tlscert
            - /etc/buildkit/tls/tls.crt
            - --tlskey
            - /etc/buildkit/tls/tls.key
            - --config
            - /etc/buildkit/buildkitd.toml
            - --oci-worker-no-process-sandbox
          resources:
            requests:
              cpu: 500m
              memory: 1Gi
            limits:
              cpu: 8
              memory: 8Gi
          ports:
            - name: grpc-tls
              containerPort: 1234
          readinessProbe:
            exec:
              command:
                - buildctl
                - debug
                - workers
            initialDelaySeconds: 5
            periodSeconds: 30
          livenessProbe:
            exec:
              command:
                - buildctl
                - debug
                - workers
            initialDelaySeconds: 10
            periodSeconds: 30
          securityContext:
            seccompProfile:
              type: Unconfined
            appArmorProfile:
              type: Unconfined
            runAsUser: 1000
            runAsGroup: 1000
            runAsNonRoot: true
            allowPrivilegeEscalation: true
            capabilities:
              add:
                - SYS_ADMIN
                - SETUID
                - SETGID
                - CHOWN
                - FOWNER
                - DAC_OVERRIDE
          volumeMounts:
            - name: buildkitd
              mountPath: /home/user/.local/share/buildkit
            - name: config
              mountPath: /etc/buildkit/buildkitd.toml
              subPath: buildkitd.toml
            - name: registry-ca
              mountPath: /etc/ssl/certs/registry-ca.crt
              subPath: ca.crt
              readOnly: true
            - name: buildkitd-tls
              mountPath: /etc/buildkit/tls
              readOnly: true
      volumes:
        - name: buildkitd
          emptyDir:
            sizeLimit: 20Gi
        - name: config
          configMap:
            name: buildkitd-config
        - name: registry-ca
          secret:
            secretName: homelab-ca
        - name: buildkitd-tls
          secret:
            secretName: buildkitd-tls
